
[package]
name = "inlottie"
version = "0.1.6"
edition = "2021"
default-run = "inlottie"
license = "MIT OR Apache-2.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
 repository = "https://github.com/mhfan/inlottie"
description = "lib/tool in Rust to load/save/parse/render lottie animation files"
categories  = [ "parser-implementations", "rendering::data-formats", "graphics",
     "multimedia::images" ]     # https://crates.io/category_slugs
keywords = [ "Lottie", "Rive", "Animation", "vector-graphic" ]
#exclude  = [ "examples" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = [ "rive-rs" ]
b2d = [ "intvg", "pixels" ]
vello = [ "dep:vello", "image", "wgpu", "anyhow", "pollster" ]

[[bin]]
name = "vello"
path = "src/winit_vello.rs"
required-features = [ "vello" ]

[[bin]]
name = "blend2d"
path = "src/winit_b2d.rs"
required-features = [ "b2d" ]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_repr = "0.1"

#read_color = "1.0"
# geometric types with a focus on 2d graphics and layout
#euclid = "0.22" # { version = "0.22", features = [ "serde" ] }

#flo_curves = "0.7"
kurbo = "0.11"
usvg  = "0.42"

pixels = { version = "0.13", optional = true }
intvg = { version = "0.1", optional = true, git = "https://github.com/mhfan/intvg.git" }

vello = { version = "0.1", optional = true, git = "https://github.com/linebender/vello.git" }
pollster = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
image = { version = "0.25", optional = true } #features = [ "png", "jpeg", "gif" ]
wgpu  = { version = "0.20", optional = true }

winit = "0.29"
femtovg = { version = "0.9", features = [ "image-loading" ]}

#rive-rs = { optional = true, git = "https://github.com/rive-app/rive-rs" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.31" # offscreen@v0.29
glutin-winit = "0.4"
raw-window-handle = "0.5" # HasRawWindowHandle

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features = [
    "console", "WebGlContextAttributes",
] }

[dev-dependencies]
serde_path_to_error = "0.1"
serde_test = "1.0"
glob = "0.3"

[build-dependencies]
chrono = "0.4"

[profile.dev]
#incremental = false
opt-level = 1   # Enable a small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3   # Enable high optimizations for dependencies, but not for own code.

[profile.release]
codegen-units = 1
strip = 'debuginfo'
panic = 'abort'
#opt-level = 3   # default level
lto = 'fat' # true

[workspace]

